# Sample-Server

./: .dockerignore  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  BindHelper.cpp  BindHelper.hpp  BindRefl.cpp  BindRefl.hpp  BindStruct.cpp  BindStruct.hpp  BindValue.cpp  BindValue.hpp  BindValueHelper.hpp  BindVariable.hpp  BindableMember.hpp  BindableMemberPlaceholder.hpp  BindableMemberValue.hpp  BindablePlaceholder.hpp  BrowsePath.cpp  BrowsePath.hpp  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ConvertSimpleValue.cpp  ConvertSimpleValue.hpp  ConvertStructValue.cpp  ConvertStructValue.hpp  Dockerfile  ExampleMachinetoolServer.cpp  ExampleUmatiServer.cpp  Instantiation.cpp  Instantiation.hpp  MT.hpp  NS0.hpp  NodeValue.cpp  NodeValue.hpp  NodesMaster.cpp  NodesMaster.hpp  OpcUaCondition.hpp  (+21 more)
.github/: CMakeLists.txt  Dockerfile  dependabot.yml  renovate.json
.github/ciPatches/: ads.patch  libressl-no_postfix.patch  open62541.patch
.github/linters/: .clang-format  .clang-format-ignore  .jscpd.json  cmake-format.yaml
.github/workflows/: build.yml  codeql-analysis.yml  delete-images.yml  linter.yml  mega-linter.yml  mingw.yml  rebase.yml
AdditiveManufacturing/: BasicAMMachine.cpp  BasicAMMachine.hpp  FullAMMachine.cpp  FullAMMachine.hpp  InstantiatedAMMachine.cpp  InstantiatedAMMachine.hpp  ShowcaseAMMachine.cpp  ShowcaseAMMachine.hpp
Configuration/: Configuration.cpp  Configuration.hpp  Configuration_json.cpp  Configuration_json.hpp
Exceptions/: NodeNotFound.hpp
GMS/: BasicGMS.cpp  BasicGMS.hpp  FullGMS.cpp  FullGMS.hpp  HexagonGlobal.cpp  HexagonGlobal.hpp  HexagonSim.cpp  HexagonSim.hpp  InstantiatedGMS.cpp  InstantiatedGMS.hpp  OGPSmartScopeCNC500.cpp  OGPSmartScopeCNC500.hpp  WenzelLH.cpp  WenzelLH.hpp
MachineTools/: BasicMachineTool.cpp  BasicMachineTool.hpp  CNShowcaseMachineTool.cpp  CNShowcaseMachineTool.hpp  FullMachineTool.cpp  FullMachineTool.hpp  FullMachineToolDynamic.cpp  FullMachineToolDynamic.hpp  InstantiatedMachineTool.cpp  InstantiatedMachineTool.hpp  MRMachineTool.cpp  MRMachineTool.hpp  Relab.cpp  Relab.hpp  ShowcaseMachineTool.cpp  ShowcaseMachineTool.hpp  SimulatedInstance.cpp  SimulatedInstance.hpp  SimulatedMachineTool.cpp  SimulatedMachineTool.hpp
OpcUaTypes/: Attributes.hpp  ConstNodeId.cpp  ConstNodeId.hpp  DateTime.hpp  EUInformation.cpp  EUInformation.hpp  LocalizedText.cpp  LocalizedText.hpp  ReflectionHelper.hpp  StatusCode.hpp
Robotics/: BasicRobot.cpp  BasicRobot.hpp  InstantiatedRobot.cpp  InstantiatedRobot.hpp
TypeDefinition/: TypeDefinition.hpp  TypeDefiniton.hpp
TypeDefinition/AdditiveManufacturing/: AdditiveManufacturing.hpp  Constants.hpp  Consumable.hpp  ConsumableList.hpp  EquipmentAM.hpp  MachineIdentificationAM.hpp  Material.hpp  MaterialList.hpp
TypeDefinition/DI/: Component.hpp  Constants.hpp  IMachineTagNameplate.hpp  ITagNameplate.hpp  IVendorNameplate.hpp  TopologyElement.hpp
TypeDefinition/GMS/: CalibrationPrognosisType.hpp  Constants.hpp  CorrectionType.hpp  GMSEquipmentType.hpp  GMSIdentificationType.hpp  GMSNotification.hpp  GMSPrognosisList.hpp  GMSResultManagementType.hpp  GMSSensor.hpp  GMSToolList.hpp  GMSType.hpp  WorkspaceType.hpp
TypeDefinition/IA/: BasicStacklight.hpp  Constants.hpp  StackElement.hpp  StackElementLight.hpp
TypeDefinition/MachineTool/: Alert.hpp  BaseTool.hpp  ChannelMonitoring.hpp  Constants.hpp  EDMGeneratorMonitoring.hpp  ElementMonitoring.hpp  Equipment.hpp  LaserMonitoring.hpp  MachineOperationMonitoring.hpp  MachineTool.hpp  MachineToolIdentification.hpp  MaintenancePrognosis.hpp  ManualActivityPrognosis.hpp  Monitoring.hpp  MultiTool.hpp  Notification.hpp  NotificationEvent.hpp  PartLoadPrognosis.hpp  PartUnLoadPrognosis.hpp  ProcessChangeoverPrognosis.hpp  Production.hpp  ProductionActiveProgram.hpp  ProductionJob.hpp  ProductionJobEndPrognosis.hpp  ProductionJobList.hpp  ProductionJobTransitionEvent.hpp  ProductionPart.hpp  ProductionPartSet.hpp  ProductionProgram.hpp  ProductionStateMachine.hpp  Prognosis.hpp  PrognosisList.hpp  SoftwareIdentification.hpp  SpindleMonitoring.hpp  Tool.hpp  ToolChangePrognosis.hpp  ToolLife.hpp  ToolList.hpp  ToolLoadPrognosis.hpp  ToolUnloadPrognosis.hpp  (+2 more)
UmatiServerLib/: BindHelper.cpp  BindHelper.hpp  BindRefl.hpp  BindVariable.hpp  BindableMember.hpp  BindableMemberPlaceholder.hpp  BindableMemberValue.hpp  ConvertSimpleValue.cpp  ConvertSimpleValue.hpp  ConvertStructValue.cpp  ConvertStructValue.hpp  Instantiation.cpp  Instantiation.hpp  NodeValue.cpp  NodeValue.hpp  NodesMaster.cpp  NodesMaster.hpp  OpcUaCondition.hpp  OpcUaEvent.hpp  OpcUaKeys.cpp  OpcUaKeys.hpp  Publication.hpp  ServerHelper.cpp  ServerHelper.hpp  StateMachine.cpp  StateMachine.hpp  StateMachineInstance.hpp  TypeToUaDatatype.hpp  UaTypeHelper.hpp  UnbindRefl.hpp  Util.cpp  Util.hpp  ValueDecorator.hpp
Woodworking/: BasicWoodworking.cpp  BasicWoodworking.hpp  FullWoodworking.cpp  FullWoodworking.hpp  InstantiatedWoodworking.cpp  InstantiatedWoodworking.hpp
arch/: gmtime.hpp
cmake/: FindADS.cmake  FindReflCpp.cmake
doc/: Compile.md  Usage.md
model/: MTExampleServer.tt2pro  Opc.Ua.IA.fixed.bsd  Opc.Ua.Ia.NodeSet2.csv  Opc.Ua.Ia.NodeSet2.xml  Opc.Ua.MachineTool.Nodeset2.bsd  Opc.Ua.MachineTool.Nodeset2.csv  Opc.Ua.MachineTool.Nodeset2.ua  Opc.Ua.MachineTool.Nodeset2.xml  Opc.Ua.MachineTool.Nodeset2.xsd  Opc.Ua.MachineTool.bsd  Opc.Ua.Machinery.NodeSet2.csv  Opc.Ua.Machinery.NodeSet2.xml  Opc.Ua.Robotics.NodeSet2.bsd  Opc.Ua.Robotics.NodeSet2.xml  industrial_automation.bsd  industrial_automation.ua  industrial_automation.xml  iswexample.csv  iswexample.ua  iswexample.xml  machinery.csv  machinery.ua  machinery.xml  machinetool.bsd  machinetool.csv  machinetool.ua  machinetool.xml  machinetool.xsd  umati.bsd  umati.csv  umati.tt2pro  umati.ua  umati.xml  umati.xsd
super-linter-output/: super-linter-summary.md
tests/: CMakeLists.txt  Test_BindNodeId.cpp  Test_BindStruct.cpp  Test_BindWrongDatatype.cpp  Test_MTEvent.cpp  Test_TranslateBrowse.cpp
tests/util/: MTServer_Test.hpp  UAClient.cpp  UAClient.hpp  UAServer_Test.hpp
(+80 files in other folders)
