cmake_minimum_required(VERSION 3.15)

project(BuildWithDependencies VERSION 0.1)


include(${CMAKE_ROOT}/Modules/ExternalProject.cmake)

ExternalProject_Add(GTestExternal
	SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../deps/googletest
	CMAKE_ARGS -Dgtest_force_shared_crt:BOOL=ON -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}
	INSTALL_DIR "${CMAKE_INSTALL_PREFIX}"
)

ExternalProject_Add(JsonExternal
	SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../deps/json
	CMAKE_ARGS -DJSON_BuildTests:BOOL=OFF -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}
	INSTALL_DIR "${CMAKE_INSTALL_PREFIX}"
)

find_package(Patch REQUIRED)
# Patch command might be applied already, so errors need to be ignored.
ExternalProject_Add(libreSSLExternal
	DOWNLOAD_DIR ${CMAKE_CURRENT_BINARY_DIR}/libreSslDownload
	SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/libreSslSource
	URL "https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.3.3.tar.gz"
	URL_HASH SHA256=A471565B36CCD1A70D0BD7D37C6E95C43A26A62829B487D9D2CDEBFE58BE3066
	PATCH_COMMAND "${Patch_EXECUTABLE}" -p1 --forward -d ${CMAKE_CURRENT_BINARY_DIR}/libreSslSource < ${CMAKE_CURRENT_SOURCE_DIR}/ciPatches/libressl-no_postfix.patch || echo "Patch returned non-zero"
	CMAKE_ARGS -DLIBRESSL_APPS:BOOL=0 -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}
	INSTALL_DIR "${CMAKE_INSTALL_PREFIX}"
)

ExternalProject_Add(open62541External
	SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../deps/open62541
	CMAKE_ARGS -DUA_ENABLE_SUBSCRIPTIONS_ALARMS_CONDITIONS:BOOL=ON -DUA_ENABLE_SUBSCRIPTIONS_EVENTS:BOOL=ON -DUA_NAMESPACE_ZERO:STRING=FULL -DUA_ENABLE_ENCRYPTION:STRING=LIBRESSL -DLIBRESSL_ROOT_DIR:PATH=${CMAKE_INSTALL_PREFIX} -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}
	INSTALL_DIR "${CMAKE_INSTALL_PREFIX}"
	DEPENDS libreSSLExternal
)

ExternalProject_Add(open62541CppExternal
	SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../deps/open62541Cpp
	CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}
	INSTALL_DIR "${CMAKE_INSTALL_PREFIX}"
	DEPENDS open62541External GTestExternal
)

ExternalProject_Add(Sample-Server
	SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..
	CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}
	INSTALL_DIR "${CMAKE_INSTALL_PREFIX}"
	DEPENDS open62541CppExternal GTestExternal JsonExternal
	BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/SampleServer-build
)
